--- a/Menus/DeviceInfoAndChangeControlMenu.kv
+++ b/Menus/DeviceInfoAndChangeControlMenu.kv
@@ -30,10 +30,10 @@
     spacing: 2
     Button:
         text: 'Poll And Extract Device Information'
-        on_press: root.DeviceInfoPollAndExtractButton(*args)
+        on_release: root.DeviceInfoPollAndExtractButton(*args)
     Button:
         text: 'Change Control'
-        on_press: root.DeviceInfoChangeControlButton(*args)
+        on_release: root.DeviceInfoChangeControlButton(*args)
 
 
         
