--- a/Menus/IntConfMenu.kv
+++ b/Menus/IntConfMenu.kv
@@ -30,10 +30,10 @@
     spacing: 2
     Button:
         text: 'Assign IPv4 Address'
-        on_press: root.IntConfAssignIPv4Button(*args)
+        on_release: root.IntConfAssignIPv4Button(*args)
     Button:
         text: 'Ethernet Interface Configuration'
-        on_press: root.IntConfEthernetIntButton(*args)
+        on_release: root.IntConfEthernetIntButton(*args)
         
 		
 
