--- a/Menus/NetMonAndManageMenu.kv
+++ b/Menus/NetMonAndManageMenu.kv
@@ -30,7 +30,7 @@
     spacing: 2
     Button:
         text: 'SPAN Configuration'
-        on_press: root.NetMonSpanConfButton(*args)
+        on_release: root.NetMonSpanConfButton(*args)
 
 
 
