--- a/Menus/NetScanningAndTrafficMonMenu.kv
+++ b/Menus/NetScanningAndTrafficMonMenu.kv
@@ -30,7 +30,7 @@
     spacing: 2
     Button:
         text: 'Monitor Network Traffic With Wireshark'
-        on_press: root.NetScanWiresharkButton(*args)
+        on_release: root.NetScanWiresharkButton(*args)
 
 
 
