--- a/Menus/NetTestingMenu.kv
+++ b/Menus/NetTestingMenu.kv
@@ -30,7 +30,7 @@
     spacing: 2
     Button:
         text: 'Ping A Network Device'
-        on_press: root.NetTestingPingButton(*args)
+        on_release: root.NetTestingPingButton(*args)
 
 
 
