Added a current_screen and previous_screen properties  within the MainApplicationApp class to track screens.
Imported StringProperty.

Added an on_pre_enter event to each screen that will modify the current screen property when entereted to dynamically change the action bar title.

--- a/MainMenu.kv
+++ b/MainMenu.kv
@@ -9,6 +9,7 @@
 #Creates the Main Menu Screen and layout the widgets as desired
 
 <MainMenu@Screen>:
+    on_pre_enter: app.current_screen = "Main Menu"
     name: 'MainMenuScreen'
     AnchorLayout:
         anchor_x: 'center'
