--- a/Menus/RoutingIntMenu.kv
+++ b/Menus/RoutingIntMenu.kv
@@ -3,6 +3,7 @@
 #:import RoutingIntMenu RoutingIntMenu
 
 <RoutingIntMenu@Screen>:
+    on_pre_enter: app.current_screen = "Routing Configuration"
     name: 'RoutingIntMenuScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -41,6 +42,7 @@
 
 
 <RoutingIntStaticRoute>:
+    on_pre_enter: app.current_screen = "Routing Configuration - Static Route"
     name: 'RoutingIntStaticRouteScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -79,6 +81,7 @@
 
 
 <RoutingIntDefaultRoute>:
+    on_pre_enter: app.current_screen = "Routing Configuration - Default Route"
     name: 'RoutingIntDefaultRouteScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -118,6 +121,7 @@
 
 
 <RoutingIntDefaultGateway>:
+    on_pre_enter: app.current_screen = "Routing Configuration - Default Gateway"
     name: 'RoutingIntDefaultGatewayScreen'
     AnchorLayout:
         anchor_x: 'center'
