--- a/Menus/SetStorageLocation.kv
+++ b/Menus/SetStorageLocation.kv
@@ -5,6 +5,7 @@
 
 
 <SetStorageLocation>:
+    on_pre_enter: app.current_screen = "Set Storage Location"
     name: 'SetStorageLocationScreen'
     AnchorLayout:
         anchor_x: 'center'
