--- a/MenuBar.kv
+++ b/MenuBar.kv
@@ -11,12 +11,13 @@
         ActionView:
             use_separator: True
             ActionPrevious:
-                title: 'Action Bar'
+                title:  str(app.current_screen) 
                 on_release: app.GoPreviousScreen()
             ActionOverflow:
             ActionButton:
                 text: 'Return To Main Menu'
                 on_release: root.ReturnToMainMenu(*args)
+                on_release: app.current_screen = "Main Menu"
             ActionButton:
                 text: 'Set Storage Location'
                 on_release: root.SetStorageLocationButton(*args)
@@ -25,7 +26,7 @@
                 text: 'Options'
                 disabled: True
             ActionButton:
-                text: 'Exit Application'
+                text: 'Exit'
                 on_release: app.stop()
 
 
