--- a/Menus/NetTestingMenu.kv
+++ b/Menus/NetTestingMenu.kv
@@ -3,6 +3,7 @@
 #:import NetTestingMenu NetTestingMenu
 
 <NetTestingMenu@Screen>:
+    on_pre_enter: app.current_screen = "Network Testing"
     name: 'NetTestingMenuScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -36,6 +37,7 @@
 
 
 <NetTestingPing>:
+    on_pre_enter: app.current_screen = "Network Testing - Ping"
     name: 'NetTestingPingScreen'
     AnchorLayout:
         anchor_x: 'center'
