--- a/Menus/SecurityConfMenu.kv
+++ b/Menus/SecurityConfMenu.kv
@@ -3,6 +3,7 @@
 #:import SecurityConfMenu SecurityConfMenu
 
 <SecurityConfMenu@Screen>:
+    on_pre_enter: app.current_screen = "Security Configuration"
     name: 'SecurityConfMenuScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -43,6 +44,7 @@
 
 
 <SecurityConfLocalUsernameDatabase>:
+    on_pre_enter: app.current_screen = "Security Configuration - Local Username Database"
     name: 'SecurityConfLocalUsernameDatabaseScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -82,6 +84,7 @@
 
 
 <SecurityConfPasswordEncryption>:
+    on_pre_enter: app.current_screen = "Security Configuration - Password Encryption"
     name: 'SecurityConfPasswordEncryptionScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -122,6 +125,7 @@
 
 
 <SecurityConfAuxVtyConLines>:
+    on_pre_enter: app.current_screen = "Security Configuration - Line Configuration"
     name: 'SecurityConfAuxVtyConLinesScreen'
     AnchorLayout:
         anchor_x: 'center'
