Early work on previous screen button.
Added GoPreviousScreen function, not fully operational

--- a/MainMenu.kv
+++ b/MainMenu.kv
@@ -10,6 +10,7 @@
 
 <MainMenu@Screen>:
     on_pre_enter: app.current_screen = "Main Menu"
+    on_pre_enter: app.previous_screen.append('MainMenuScreen')
     name: 'MainMenuScreen'
     AnchorLayout:
         anchor_x: 'center'
