--- a/Menus/SetStorageLocation.kv
+++ b/Menus/SetStorageLocation.kv
@@ -6,6 +6,7 @@
 
 <SetStorageLocation>:
     on_pre_enter: app.current_screen = "Set Storage Location"
+    on_pre_enter: app.previous_screen.append('SetStorageLocationScreen')
     name: 'SetStorageLocationScreen'
     AnchorLayout:
         anchor_x: 'center'
