--- a/MenuBar.kv
+++ b/MenuBar.kv
@@ -11,7 +11,7 @@
         ActionView:
             use_separator: True
             ActionPrevious:
-                title:  str(app.current_screen) 
+                title:  app.current_screen
                 on_release: app.GoPreviousScreen()
             ActionOverflow:
             ActionButton:
