--- a/Menus/NetMonAndManageMenu.kv
+++ b/Menus/NetMonAndManageMenu.kv
@@ -4,6 +4,7 @@
 
 <NetMonMenu@Screen>:
     on_pre_enter: app.current_screen = "Network Monitoring and Management"
+    on_pre_enter: app.previous_screen.append('NetMonMenuScreen')
     name: 'NetMonMenuScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -37,6 +38,7 @@
 
 <NetMonSpanConf>:
     on_pre_enter: app.current_screen = "Network Monitoring and Management - SPAN Configuration"
+    on_pre_enter: app.previous_screen.append('NetMonSpanConfScreen')
     name: 'NetMonSpanConfScreen'
     AnchorLayout:
         anchor_x: 'center'
