--- a/Menus/NetScanningAndTrafficMonMenu.kv
+++ b/Menus/NetScanningAndTrafficMonMenu.kv
@@ -4,6 +4,7 @@
 
 <NetScanMenu@Screen>:
     on_pre_enter: app.current_screen = "Network Scanning and Traffic Monitoring"
+    on_pre_enter: app.previous_screen.append('NetScanMenuScreen')
     name: 'NetScanMenuScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -37,6 +38,7 @@
 
 <NetScanWireshark>:
     on_pre_enter: app.current_screen = "Network Scanning and Traffic Monitoring - Wireshark"
+    on_pre_enter: app.previous_screen.append('NetScanWiresharkScreen')
     name: 'NetScanWiresharkScreen'
     AnchorLayout:
         anchor_x: 'center'
