--- a/Menus/BasicConfMenu.kv
+++ b/Menus/BasicConfMenu.kv
@@ -129,6 +129,7 @@
         padding: 5
         Execute:
             id: _Execute_Button_
+            on_release: root.BasicConfDomainExecute()
 
         
 <BasicConfDomainLayout@GridLayout>:
@@ -181,6 +182,7 @@
         padding: 5
         Execute:
             id: _Execute_Button_
+            on_release: root.BasicConfReloadExecute()
 
         
 <BasicConfReloadLayout@GridLayout>:
