--- a/Menus/IntConfMenu.kv
+++ b/Menus/IntConfMenu.kv
@@ -72,13 +72,17 @@
     orientation: 'vertical'
     cols: 2
     padding: 5
-    spacing: 2
     Label: 
         text: 'Enter IPv4 Address of Device'
-        size_hint_y: None
-        height: IPv4AddressTextInput.height
+
+
+    Label: 
+        text: 'Select Subnet Mask for the Network'
     IPv4AddressInput:
         id: IPv4AddressTextInput
+    SubnetMaskSpinner:
+        id: SubnetMaskSpinner
+
 
 
 
