Created a custom widget IPv4TargetDeviceLayout to reduce code reuse and provide a widget for the target device's IP address.
A new AnchorLayout in most function screens has been created and the IPv4TargetDeviceLayout widget has been called inside it, the widget will appear just above the execute button on most screens.

Updated the Subnet Mask Spinner with an ID and sync_height so that drop down elements use supplied height.

Changed all occurences of variable ip_address to device_ip_address in order to differentiate between target IP address and using the IP address for configuration.

Updated IntConfAssignIPv4 screen, added IPv4TargetDeviceLayout widget, modified IntConfAssignIPv4Layout widget to allow user to select desired Interface and IP address that should be configured. Execute button will call IntConfAssignIPv4Execute function when pressed.

IntConfAssignIPv4Execute updated to extract user inputs and configure the network device.

--- a/MainApplication.kv
+++ b/MainApplication.kv
@@ -16,16 +16,29 @@
     size_hint_y: None
     height: '32dp'
 
+
+<IPv4TargetDeviceLayout@GridLayout>:
+    orientation: 'vertical'
+    cols: 2
+    Label: 
+        text: 'Enter IPv4 Address of  Target Device'
+        size_hint_y: None
+        height: IPv4AddressTextInput.height
+    IPv4AddressInput:
+        id: IPv4AddressTextInput
+
 #Create a custome Spinner Widget to allow for the Subnet/ to be selected
 
-<SubnetMaskSpinner@RelativeLayout>: 
+<SubnetMaskSpinnerLayout@RelativeLayout>: 
   
     # creating the spinner 
     Spinner:
+        id: SubnetMaskSpinner
         size_hint: 1, None
         height: '32dp'
+        sync_height: True
         text: 'Subnet Mask'
-        values: '255.255.255.0 /24', '255.255.255.128 /25', '255.255.255.192 /26', '255.255.255.224 /27', '255.255.255.240 /28', '255.255.255.248 /29', '255.255.255.252 /30'
+        values: '255.255.255.0', '255.255.255.128', '255.255.255.192', '255.255.255.224', '255.255.255.240', '255.255.255.248', '255.255.255.252'
 
  #Create a Custom PopUp Widget for Username and Password Entry
 
