--- a/Menus/RoutingIntMenu.kv
+++ b/Menus/RoutingIntMenu.kv
@@ -74,7 +74,7 @@
     padding: 5
     spacing: 2
     Label: 
-        text: 'Enter IPv4 Address of Device'
+        text: 'Enter IPv4 Address of  Target Device'
         size_hint_y: None
         height: IPv4AddressTextInput.height
     IPv4AddressInput:
@@ -114,7 +114,7 @@
     padding: 5
     spacing: 2
     Label: 
-        text: 'Enter IPv4 Address of Device'
+        text: 'Enter IPv4 Address of  Target Device'
         size_hint_y: None
         height: IPv4AddressTextInput.height
     IPv4AddressInput:
@@ -155,7 +155,7 @@
     padding: 5
     spacing: 2
     Label: 
-        text: 'Enter IPv4 Address of Device'
+        text: 'Enter IPv4 Address of  Target Device'
         size_hint_y: None
         height: IPv4AddressTextInput.height
     IPv4AddressInput:
