--- a/Menus/SecurityConfMenu.kv
+++ b/Menus/SecurityConfMenu.kv
@@ -75,7 +75,7 @@
     padding: 5
     spacing: 2
     Label: 
-        text: 'Enter IPv4 Address of Device'
+        text: 'Enter IPv4 Address of  Target Device'
         size_hint_y: None
         height: IPv4AddressTextInput.height
     IPv4AddressInput:
@@ -115,7 +115,7 @@
     padding: 5
     spacing: 2
     Label: 
-        text: 'Enter IPv4 Address of Device'
+        text: 'Enter IPv4 Address of  Target Device'
         size_hint_y: None
         height: IPv4AddressTextInput.height
     IPv4AddressInput:
@@ -156,7 +156,7 @@
     padding: 5
     spacing: 2
     Label: 
-        text: 'Enter IPv4 Address of Device'
+        text: 'Enter IPv4 Address of  Target Device'
         size_hint_y: None
         height: IPv4AddressTextInput.height
     IPv4AddressInput:
